--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <title>Booklist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,6 +8,9 @@
 </head>
 <body>
 	<h2>Book list</h2>
+	<form th:action="@{/logout}" method="post">
+		<input type="submit"  value="sign out" />
+	</form>
 	<table class="table table-striped">
 		<tr>
 			<th>Author</th>
